# pointcloud-registration

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  bounding__box_8hpp.html  bounding__box_8hpp.js  bounding__box_8hpp_source.html  classes.html  classpcr_1_1core_1_1Point-members.html  classpcr_1_1core_1_1Point.html  classpcr_1_1core_1_1Point.js  classpcr_1_1registration_1_1ICP-members.html  classpcr_1_1registration_1_1ICP.html  classpcr_1_1spatial_1_1KdTree-members.html  classpcr_1_1spatial_1_1KdTree.html  classpcr_1_1spatial_1_1KdTree.js  classtinyply_1_1Buffer-members.html  classtinyply_1_1Buffer.html  dir_05418de44ad1dbbbe061f96dd919f782.html  dir_05418de44ad1dbbbe061f96dd919f782.js  dir_1ec8dd0f6dbfa6a7526230c7a4113cf0.html  dir_1ec8dd0f6dbfa6a7526230c7a4113cf0.js  dir_4a5d62626ce48c1a2630552f43aac181.html  dir_4a5d62626ce48c1a2630552f43aac181.js  dir_61e83c81fb65f498edf52055e4c46201.html  dir_61e83c81fb65f498edf52055e4c46201.js  dir_c648106f7cb984c5f7861dfbb1a06663.html  dir_c648106f7cb984c5f7861dfbb1a06663.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  download_datasets.ps1  download_datasets.sh  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  hierarchy.html  (+63 more)
.github/workflows/: main.yml
benchmarks/: CMakeLists.txt
benchmarks/io/: CMakeLists.txt  bench_ply_read.cpp  bench_ply_write.cpp
benchmarks/spatial/: CMakeLists.txt  bench_kd_tree_build.cpp  bench_knn_search.cpp  bench_radius_search.cpp
cmake/: CompilerWarnings.cmake  FetchDependencies.cmake  Sanitizers.cmake
include/pcr/: prelude.hpp
include/pcr/core/: bounding_box.hpp  point.hpp  point_cloud.hpp
include/pcr/io/: ply.hpp  tinyply.h  tinyply_utils.hpp
include/pcr/registration/: icp.hpp
include/pcr/spatial/: kd_tree.hpp  spatial_index.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+2 more)
src/core/: point_cloud.cpp
src/io/: ply.cpp
src/spatial/: kd_tree.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_point.cpp  test_point_cloud.cpp
tests/io/: CMakeLists.txt  test_ply.cpp
tests/registration/: CMakeLists.txt  test_icp.cpp
tests/spatial/: CMakeLists.txt  kd_tree_helpers.hpp  test_kd_tree.cpp  test_kd_tree_brute.cpp
